--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,5 +1,5 @@
 .bg-header {
-  background: url("../images/powerscourt.jpg") center center no-repeat;
+  background: url("../images/hero-video.jpg") center center no-repeat;
   background-attachment: fixed;
   height: 620px;
 }
