--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,8 +13,6 @@ div.mini-card-grid {
 	left: 0px;
 	line-height: 27.2px;
 	margin: 0px;
-	overflow: scroll auto;
-	overflow-x: scroll;
 	padding: 3rem 0px 3rem 2rem;
 	position: relative;
 	right: 0px;
@@ -91,7 +89,13 @@ h3.mini-card-title {
 	margin: 0px 0px 1rem;
 }
 
+a:focus {
+	opacity: 0.66;
+}
 
+a:hover {
+	opacity: 0.66;
+}
 
 div.tags {
 	box-sizing: border-box;
@@ -550,7 +554,7 @@ article#mini-post-341982.mini-card.module.module-article.article:not(:first-chil
 		gap: 1rem;
 		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 		margin: 0px;
-		overflow-x: scroll;
+		
 		padding: 3rem 0px 3rem 2rem;
 		position: relative;
 	}
@@ -1306,9 +1310,7 @@ article#mini-post-341982.mini-card.module.module-article.article:not(:first-chil
 }
 
 @media (max-width: 1200px) {
-	div.mini-card-grid {
-		overflow-x: visible;
-	}
+	
 
 	article#mini-post-342750.mini-card.module.module-article.article {
 		min-width: 220px;
