--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1563,5 +1563,13 @@ article#mini-post-341982.mini-card.module.module-article.article:not(:first-chil
   display: flex;
   align-items: center;
   position: absolute;
+  height: 100vh;
+  width: 100%;
+}
+
+.contentBasic {
+  display: flex;
+  align-items: center;
+  position: absolute;
   width: 100%;
 }
